--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,11 +34,26 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+
   flutter_bloc: ^8.0.1
+
   firebase_core: ^1.12.0
+  firebase_auth: ^3.0.1
+  firebase_storage: ^10.0.1
 
   dots_indicator: ^2.0.0
   percent_indicator: ^3.4.0
+
+  url_launcher: ^6.0.9
+
+  sliding_up_panel: ^2.0.0+1
+
+  custom_timer: ^0.0.6
+
+  flutter_native_timezone: ^2.0.0
+
+  permission_handler: ^8.1.4+2
+  flutter_local_notifications: ^9.2.0
 
 dev_dependencies:
   flutter_test:
